@startuml
skinparam classAttributeIconSize 0
title __TEMPLATE's Class Diagram__\n



      abstract class com.MovieBookingSystem.Template.PrinterService {
          - date : Date
          - formatter : SimpleDateFormat
          + printTicket()
          # ticketFooter()
          # ticketHeader()
          {abstract} ~ printTicketDetails()
          {abstract} ~ printTicketPrice()
      }


  



      class com.MovieBookingSystem.Template.ReceiptPrinter {
          + ReceiptPrinter()
          + ReceiptPrinter()
          # ticketHeader()
          ~ printTicketDetails()
          ~ printTicketPrice()
      }


  



      class com.MovieBookingSystem.Template.TemplateDriver {
          {static} + main()
      }



  



      class com.MovieBookingSystem.Template.TicketPrinter {
          + TicketPrinter()
          + TicketPrinter()
          ~ printTicketDetails()
          ~ printTicketPrice()
      }


  

  com.MovieBookingSystem.Template.ReceiptPrinter -up-|> com.MovieBookingSystem.Template.PrinterService
  com.MovieBookingSystem.Template.ReceiptPrinter o-- com.MovieBookingSystem.API.Entity.SnackEntity : snacks
  com.MovieBookingSystem.Template.TicketPrinter -up-|> com.MovieBookingSystem.Template.PrinterService
  com.MovieBookingSystem.Template.TicketPrinter o-- com.MovieBookingSystem.API.Entity.BookingEntity : booking


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
